# scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: scrape.py  webscraper.py
webscraper/: __init__.py  webscraper.py
webscraper/tests/: test_webscraper.py
