[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["VariableVasasMT <kritivasas.shukla@mindtickle.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
beautifulsoup4 = "4.12.2"
chromadb = "0.4.7"
pydantic = "1.10.16"
requests = "2.32.0"
selenium = "4.14.0"
openai = "1.42"
kfp = "2.8.0"


[[tool.poetry.source]]
name = "webscraper"
url = "git@github.com:Phloxme/scraper.git"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
